--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -12,7 +12,7 @@
   margin: 20px;
   margin-top: -15px;
   /* margin-left: 3rem; */
-  border-radius: 20px;
+  /* border-radius: 20px; */
   border-radius: 30px 2px;
 }
 
