--- a/src/Components/views/Section_3.css
+++ b/src/Components/views/Section_3.css
@@ -1,107 +1,107 @@
-.section5 {
-    /* background-color: black; */
-    color: white;
-    margin-top: 150px;
-    padding: 56px;
-    position: relative;
-    background-color: var(--white);
-  }
+.section3 {
+  color: white;
+  margin-top: 150px;
+  /* background-color: var(--color3); */
+}
 
-.expertiseFlexContainer {
-    /* width: 80%; */
-    display: flex;
-    row-gap: 10px;
-    column-gap: 2rem;
-    margin-bottom: 3rem;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+p{
+    font-size: 20px !important;
+}
 
-  @media (max-width: 768px) {
-    .expertiseFlexContainer {
-      justify-content: center;
-    }
-    .expertiseFlexItems {
-      width: 100%;
-      justify-content: center;
-    }
+@media (max-width: 768px) {
+  .expertiseFlexContainer {
+    justify-content: center;
   }
+  .expertiseFlexItems {
+    width: 100%;
+    justify-content: center;
+  }
+}
 
-  
 .expertiseFlexItems {
-    box-sizing: border-box;
-    width: 46%;
-    height: fit-content;
-  }
+  box-sizing: border-box;
+  width: 100%;
+  height: fit-content;
+  /* background-color: antiquewhite; */
+}
 
-  .expertiseFlexItems h4 {
-    color: var(--white);
-    padding: 35px;
-    padding-left: 25px;
-    margin-top: 60px;
-    background: linear-gradient(to right, var(--color1), var(--color2)); 
-    font-size: 22px;
-    font-weight: 300;
-    line-height: 130%;
-    margin-bottom: 70px;
-    border: var(--white) 1px solid;
-    border-radius: 2px 30px;
-  }
- 
-  
+.h4_boton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.uno{
+ background-color: aqua;
+}
+.dos{
+ background-color: red;
+
+}
+.expertiseFlexItems h4 {
+  color: var(--white);
+  padding: 35px;
+  padding-left: 25px;
+  margin-top: 60px;
+  background: linear-gradient(to right, var(--color1), var(--color2));
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 130%;
+  margin-bottom: 70px;
+  border: var(--white) 1px solid;
+  border-radius: 2px 30px;
+  flex-grow: 1;
+}
+
 .expertiseFlexItems p {
-    font-size: 20px;
-    line-height: 140%;
-    color: var(--color1);
-    letter-spacing: 1.5px;
-    /* background-color: var(--color1); */
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
+  font-size: 20px;
+  line-height: 140%;
+  color: var(--color1);
+  letter-spacing: 1.5px;
+  /* background-color: var(--color2); */
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
-  @media (max-width: 552px) {
-    .expertiseFlexItems {
-      width: 100%;
-    }
+@media (max-width: 552px) {
+  .expertiseFlexItems {
+    width: 100%;
   }
-  @media (width <= 450px) {
-    .rotacion {
-      opacity: 1 !important;
-      animation: none !important;
-      animation-timeline: none !important;
-    }
+}
+@media (width <= 450px) {
+  .rotacion {
+    opacity: 1 !important;
+    animation: none !important;
+    animation-timeline: none !important;
   }
+}
 
-  .impar {
-    margin-top: 5vw;
-  }
-  
+.impar {
+  margin-top: 5vw;
+}
 
 /* -------------      efecto rotacion      ---------- */
 
-  .rotacion {
-    display: flex;
+.rotacion {
+  display: flex;
+  opacity: 0;
+  animation: rotate-in 2s ease-in forwards;
+  animation-timeline: view();
+}
+@keyframes rotate-in {
+  0% {
     opacity: 0;
-    animation: rotate-in 2s ease-in forwards;
-    animation-timeline: view();
+    transform: rotate(7deg);
   }
-  @keyframes rotate-in {
-    0% {
-      opacity: 0;
-      transform: rotate(9deg);
-    }
-    50% {
-      transform: rotate(0deg);
-    }
-    30% {
-      opacity: 1;
-    }
-    100% {
-      transform: rotate(0deg);
-      opacity: 1;
+  50% {
+    transform: rotate(0deg);
+  }
+  30% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+}
 
-    }
-  }
-  
-  /* -------------      efecto rotacion FIN      ---------- */
-  
+/* -------------      efecto rotacion FIN      ---------- */
