--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -6,11 +6,11 @@
 
 h3 {
   transform: rotate(4deg);
-  color: var(--color1) !important;
+  color: var(--white) !important;
 }
 #projects {
   background-color: var(--color1);
-  background: linear-gradient(to right, var(--white), var(--color1));
+  background: linear-gradient(to right, var(--color2), var(--color1));
 
   width: 99vw;
   border-radius: 30px 2px;
@@ -41,7 +41,7 @@ h3 {
   opacity: 1;
   height: 100%; /* Añadido: altura del 100% */
   object-fit: cover; /* Añadido: ajuste de objeto */
-  border: 1px solid var(--white);
+  border: 1px solid var(--color1);
   transition: all ease-in-out 0.5s; /* Añadido: transición de 0.5 segundos */
 }
 
