--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --color1: #023047;
   --color2: #219ebc;
   --color3: #8ecae6;
-  --color4: #ae5d42;
+  --color4: #149e6e;
   --color5: #ee6c4d;
   --color6: #fca311;
 
