--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -32,19 +32,15 @@
 
 .mi_nombre {
   transform: rotate(-6deg); 
-  font-size: 3rem; /* Tamaño de letra para el nombre */
+  font-size: 3rem; 
   background: linear-gradient(to right, var(--color1),  var(--color3)); 
-  /* background-color: aquamarine; */
   color: var(--color6);
   border-radius: 10px;
   padding: 15px;
   padding-left: 45px;
   padding-top: 12rem;
-  /* padding-bottom: 5rem; */
-
   border-radius: 30px 2px;
   height: 100vh;
-  /* margin-top: 31rem; */
   margin-bottom: 3rem;
   align-content: center;
   line-height: 4rem;
@@ -52,14 +48,21 @@
   letter-spacing: 0.2rem;
   display: flex;
   flex-direction: column;
+  /* background-color: aquamarine; */
 }
 
 .letters{
   transform: rotate(6deg); 
-  /* background-color: aquamarine; */
   margin-left: 2rem;
   margin-bottom: 1rem;
+  /* background-color: aquamarine; */
+}
 
+.letters_s{
+    transform: rotate(6deg); 
+    margin-left: 2.5rem;
+    margin-bottom: 1rem;
+    /* background-color: aquamarine; */
 }
 
 .hablity_agriculturalengineer {
