--- a/src/Components/views/section_1.css
+++ b/src/Components/views/section_1.css
@@ -65,13 +65,13 @@ font-size: 23px !important;
   @keyframes show {
     0% {
       opacity: 0;
-      scale: 20%;
+      scale: 70%;
     }
     30% {
       opacity: 1;
     }
     40%,
-    60%, 70% {
+    60%, 70% ,90%{
       opacity: 1;
       scale: 100%;
     }
