--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
   --color2: #219ebc;
   --color3: #8ecae6;
   --color4: #149e6e;
-  --color5: #ee6c4d;
+  --color5: #4c5454;
   --color6: #fca311;
+  --color7: #ffb703;
 
   --white: white;
   --black: black;
