--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,17 @@
   border-radius: 9999px;
 }
 
-/* .navbar-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 50 !important;
-} */
+.loading {
+  color: white;
+  font-weight: 200;
+  animation: loadingAnimation 1s infinite alternate;
+}
+
+@keyframes loadingAnimation {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.4;
+  }
+}
