--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -1,40 +1,26 @@
 /* src/Components/views/Hero.css */
 .hero {
-  /* background-color:rgb(224, 224, 224);  */
   color: var(--color1); 
-  /* padding: 20px; */
-  /* height: 100vh;  */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: ; */
-  z-index: 9999;
   margin: 20px;
   margin-top: -15px;
-  /* margin-left: 3rem; */
-  /* border-radius: 20px; */
   border-radius: 30px 2px;
 }
 
 .presentacion {
-  /* Sin rotación */
-  /* font-size: 3rem;  */
-  /* margin-bottom: 20px;  */
-  /* background-color: var(--white); */
-  /* margin-top: 0px; */
-  /* border-radius: 10px; */
-  /* z-index: 1; */
-  /* border-radius:  2px 30px; */
-  /* border: 1px solid var(--color1); */
-  padding-left: 3rem;
+  padding-left: 4rem;
+  padding-right: -8rem;
+
 
 }
 
 .mi_nombre {
   transform: rotate(-6deg); 
   font-size: 3rem; 
-  background: linear-gradient(to right, var(--color1),  var(--color3)); 
-  color: var(--color6);
+  background: linear-gradient(to right, var(--color1),  #149e6eb5); 
+  color:var(--color7);
   border-radius: 10px;
   padding: 15px;
   padding-left: 45px;
@@ -48,6 +34,7 @@
   letter-spacing: 0.2rem;
   display: flex;
   flex-direction: column;
+  width: 100%;
   /* background-color: aquamarine; */
 }
 
