--- a/src/Components/views/Section_2.css
+++ b/src/Components/views/Section_2.css
@@ -1,12 +1,12 @@
 .iconsSection {
   position: relative;
-  height: 150px;
-  background: linear-gradient(to right, var(--color1), #0384c5af); 
+  height: 20rem;
+  background: linear-gradient(to right, var(--color3), #f4f5f6af); 
 
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--white);
+  color: var(--color1);
   margin-top: 12rem;
   z-index: 20;
   /* margin-bottom: -2px !important; */
@@ -20,7 +20,7 @@
   left: 0;
   right: 0;
   height: 90px; /* Ajusta según sea necesario */
-  background: linear-gradient(to right, var(--color1), #0384c5af); 
+  background: linear-gradient(to right, var(--color3), #f4f5f6af); 
   border-radius: 100% 40% 0 0; /* Crea la curva convexa */
   z-index: 10; /* Asegura que esté detrás del contenido */
 }
@@ -29,11 +29,11 @@
 .iconsSection::after {
   content: "";
   position: absolute;
-  top: 150px; /* Ajusta según sea necesario */
+  top: 320px; /* Ajusta según sea necesario */
   left: 0;
   right: -0px;
   height: 90px; /* Ajusta según sea necesario */
-  background: linear-gradient(to right, var(--color1),  #0384c5af); 
+  background: linear-gradient(to right, var(--color3),  #f4f5f6af); 
 
   border-radius: 0 0% 100% 40%; /* Crea la curva convexa */
 }
