--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -26,14 +26,11 @@ h3 {
   transform: rotate(4deg);
 
   position: relative;
-  /* background-color: #fc050550; */
-  margin: 8rem 10px 8rem 10px; /* Añadido: margen superior, derecho, inferior e izquierdo */
-  width: 100%; /* Añadido: ancho del 70% */
-  height: 600px; /* Añadido: altura de 450px */
-  display: flex; /* Añadido: para usar flexbox */
-  justify-content: center; /* Añadido: centrar contenido horizontalmente */
-  /* Añadido: espacio entre elementos */
-  /* margin-bottom: 3rem; */
+  margin: 8rem 10px 8rem 10px; 
+  width: 100%; 
+  height: 600px; 
+  display: flex; 
+  justify-content: center; 
 }
 
 .sliderDiv {
@@ -56,8 +53,6 @@ h3 {
 .sliderDiv:hover {
   width: 30%;
   opacity: 1;
-  /* scale: 1.02; */
-  /* z-index: 3; */
   border: var(--white) 10px 2px 3px 10px solid;
 }
 
@@ -68,14 +63,9 @@ h3 {
     margin-top: 20px;
     opacity: 1;
     border-radius: 2px;
-
-    /* background-color: #85ed45; */
   }
   .sliderContainer {
-    /* background-color: #ae5d42; */
-    /* margin-top: 200px; */
     margin-bottom: 120px;
-
     display: flex;
     flex-direction: column;
     width: 100%;
