--- a/src/Components/views/section_3_1.css
+++ b/src/Components/views/section_3_1.css
@@ -78,6 +78,15 @@ p {
   /* padding-top: 10px; */
   /* padding-bottom: 10px; */
 }
+.expertiseFlexItems ul {
+    font-size: 18px !important;
+    line-height: 140%;
+    color: var(--color1);
+    letter-spacing: 1.5px;
+    /* padding-top: 10px; */
+    /* padding-bottom: 10px; */
+  }
+  
 
 @media (max-width: 552px) {
   .expertiseFlexItems {
