--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
   --color1: #023047;
   --color2: #219ebc;
   --color3: #8ecae6;
-  --color4: #149e6e;
+  --color4: #4f7942;
   --color5: #4c5454;
-  --color6: #fca311;
+  --color6: #b7091d;
   --color7: #ffb703;
 
   --white: white;
@@ -191,153 +191,7 @@ h5 {
 
 /* ============================    ESTILOS GENERALES   ========================== */
 
-/* ============================         NAVBAR         ========================== */
 
-/* Estilos para el AppBar */
-.custom-app-bar {
-  width: 100%;
-  max-width: 440px;
-  height: 62px;
-}
-
-/* Estilos para el contenedor de botones */
-.button-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-/* Estilos para los botones */
-.custom-button {
-  text-transform: none !important;
-  border-radius: 9999px !important;
-  padding: 2px 16px !important;
-  height: calc(100% - 12px) !important;
-  color: white;
-  font-family: "Montserrat", sans-serif !important;
-}
-
-.custom-button:hover {
-  background-color: var(--color1) !important;
-  color: rgb(255, 255, 255) !important;
-}
-
-/* Estilos para el contenedor principal */
-.main-container {
-  display: flex;
-  justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 100%;
-  background-color: transparent;
-  transition: background-color 0.3s ease;
-}
-
-.main-container.scrolled {
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-/* Estilos responsivos */
-@media screen and (max-width: 600px) {
-  .main-container {
-    background-color: transparent; /* Fondo transparente en pantallas pequeñas */
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  .custom-app-bar {
-    max-width: 100%;
-    background-color: transparent !important;
-    box-shadow: none !important;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 56px;
-  }
-
-  .button-container {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block !important;
-  }
-
-  .custom-toolbar {
-    padding: 0 !important;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  /* Ajuste del tamaño y posición del botón hamburguesa */
-  .menu-icon-button {
-    padding: 8px !important;
-    margin: 0 16px 0 0 !important;
-    color: black !important; /* Cambia el color del icono a negro */
-  }
-
-  /* Eliminar el margen izquierdo adicional */
-  .MuiIconButton-edgeStart {
-    margin-left: 0 !important;
-  }
-}
-
-/* Ocultar el botón hamburguesa en pantallas más grandes que 600px */
-@media (min-width: 601px) {
-  .menu-icon-button {
-    display: none !important;
-  }
-}
-
-/* Estilos responsivos para el Navbar */
-@media screen and (max-width: 450px) {
-  .custom-app-bar {
-    width: 100% !important;
-    height: 56px !important;
-    border-radius: 0 !important;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .custom-toolbar {
-    padding: 0 !important;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  /* Ajuste del tamaño y posición del botón hamburguesa */
-  .menu-icon-button {
-    padding: 8px !important;
-    margin: 0 16px 0 0 !important;
-    color: black !important;
-  }
-
-  /* Eliminar el margen izquierdo adicional */
-  .MuiIconButton-edgeStart {
-    margin-left: 0 !important;
-  }
-}
-
-/* Estilo para ocultar el icono de menú en pantallas grandes */
-.menu-icon {
-  display: none;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-}
-/* ============================       NAVBAR      ========================== */
 
 /* ============================   Section HERO1   ========================== */
 
