--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -49,9 +49,9 @@
 }
 
 .hablity_ai_agent_creator {
-  font-size: 1.5rem; /* Tamaño de letra para habilidades */
+  font-size: 1.5rem; 
   margin: 20px 0; 
-  background: linear-gradient(to right, var(--white), var(--color1)); 
+  background: linear-gradient(to right, var(--color3), var(--white)); 
   margin-right: 2rem;
   margin-left: 3rem;
 
@@ -96,16 +96,3 @@
     font-size: 1.4rem; /* Tamaño de letra para habilidades en móviles */
   }
 }
-
-/* .sebas_picture{
-    display: flex;
-    margin-top: 7rem;
-    justify-content: center;
-}
-
-.personalPresentation {
-    position: relative;
-    height: auto;
-    display: flex;
-    justify-content: center;
-  } */
