--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,8 @@ h5 {
     margin-right: 16px;
   }
   .containerLarge {
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 26px;
+    margin-right: 26px;
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 0px;
@@ -712,6 +712,7 @@ h5 {
   position: relative;
   margin-top: 126px;
   margin-bottom: 10rem;
+  /* background-color: #023047; */
 }
 
 .lets-talk-flexContainer {
@@ -725,9 +726,10 @@ h5 {
 }
 
 .lets-talk-flexItem h2 {
-  color: var(--color6);
-  font-size: 140px;
+  color: var(--color1);
+  font-size: 100px;
   margin: 0;
+  margin-top: 10vw;
   line-height: 1;
   margin-bottom: 6rem;
 }
@@ -878,8 +880,8 @@ section div {
 
 .footer {
   position: relative;
-  background-color: rgba(252, 163, 17, 0.8);
-  color: black !important;
+  background-color: var(--color1);
+  color: rgb(255, 255, 255) !important;
   padding: 20px 0 !important;
   display: block !important; /* Asegura que el footer se muestre */
 }
@@ -921,7 +923,7 @@ section div {
 }
 
 .social-icons a {
-  color: black;
+  color: rgb(247, 247, 247);
   font-size: 24px;
   transition: color 0.3s ease;
 }
@@ -1307,7 +1309,7 @@ header {
   color: var(--color6);
   text-shadow: 1px 1px 0 var(--color1), -1px -1px 0 var(--color1),
     1px -1px 0 var(--color1), -1px 1px 0 var(--color1);
-  /* border: #85ed45 1px solid; */
+  border: #85ed45 1px solid;
 }
 
 @media (width <= 480px) {
