--- a/src/Components/views/Section_2.css
+++ b/src/Components/views/Section_2.css
@@ -1,12 +1,12 @@
 .iconsSection {
   position: relative;
   height: 20rem;
-  background: linear-gradient(to right, var(--color3), #f4f5f6af); 
+  background: linear-gradient(to right, #f4f5f6af, var(--color1));
 
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--color1);
+  color: white;
   margin-top: 12rem;
   z-index: 20;
   /* margin-bottom: -2px !important; */
@@ -20,7 +20,8 @@
   left: 0;
   right: 0;
   height: 90px; /* Ajusta según sea necesario */
-  background: linear-gradient(to right, var(--color3), #f4f5f6af); 
+  background: linear-gradient(to right, #f4f5f6af, var(--color1));
+
   border-radius: 100% 40% 0 0; /* Crea la curva convexa */
   z-index: 10; /* Asegura que esté detrás del contenido */
 }
@@ -33,8 +34,7 @@
   left: 0;
   right: -0px;
   height: 90px; /* Ajusta según sea necesario */
-  background: linear-gradient(to right, var(--color3),  #f4f5f6af); 
-
+  background: linear-gradient(to right, #f4f5f6af, var(--color1));
   border-radius: 0 0% 100% 40%; /* Crea la curva convexa */
 }
 
