--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -9,8 +9,9 @@ h3 {
   color: var(--white) !important;
 }
 #projects {
+  margin-top: 12vw;  
   background-color: var(--color1);
-  background: linear-gradient(to right, var(--color2), var(--color1));
+  background: linear-gradient(to bottom, var(--color1), var(--white));
 
   width: 99vw;
   border-radius: 30px 2px;
@@ -38,7 +39,8 @@ h3 {
   opacity: 1;
   height: 100%; /* Añadido: altura del 100% */
   object-fit: cover; /* Añadido: ajuste de objeto */
-  border: 1px solid var(--color1);
+  /* border: 1px solid var(--color1); */
+  margin: 2px;
   transition: all ease-in-out 0.5s; /* Añadido: transición de 0.5 segundos */
 }
 
